--- a/shootout/fasta/Makefile
+++ b/shootout/fasta/Makefile
@@ -13,7 +13,7 @@ SLOW_OPTS = 25000000  # official shootout setting
 
 # The benchmark game also uses -fllvm, which we can't since it might
 # not be available on the developer's machine.
-HC_OPTS += -O2 -XBangPatterns -XOverloadedStrings -package bytestring
+HC_OPTS += -XBangPatterns -XOverloadedStrings -package bytestring
 
 #------------------------------------------------------------------
 # Create output to validate against
